# nll_to_po

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  changelog.md  pyproject.toml  requirements.txt  setup.py
notebook/: UCI_classif.ipynb  exp.ipynb  multi_reward.ipynb  simple_grpo_from_colab.ipynb  test_theory.ipynb
scripts/: mbrl.py  nll_mse.py  po_mse.py  po_rbf.py
src/nll_to_po/models/: dn_policy.py
src/nll_to_po/training/: loss.py  reward.py  utils.py
