[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]

[project]
name = "NLL_TO_PO"
authors = [
  {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"},
]
maintainers = [
  {name = "Abdelhakim Benechehab", email = "abdelhakim.benechehab@gmail.com"},
]
dynamic = ["version", "readme", "dependencies"]
description = "NLL_TO_PO"
requires-python = ">=3.12"
keywords = ["Policy optimization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
  "Environment :: GPU :: NVIDIA CUDA :: 12 :: 12.1",
  "License :: OSI Approved :: MIT License",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = ['ruff', 'pre-commit', 'black', 'detect-secrets']

[tool.setuptools]
license-files = ['LICEN[CS]E*', 'COPYING*', 'NOTICE*', 'AUTHORS*']

[project.scripts]

[tool.setuptools.dynamic]
readme = { file = ["README.md"] }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools_scm]

[tool.ruff]
line-length = 88

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
